--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=3000
 loction=pk.73d02362f3b19209cc519b0dd4e9cf2f	
 weather=e5533604561a4e008bbc7e5ee03fb7dc	
 park=JEqQ1NhTuMx7dkKha4yCqULkhhvic9hNDwLO8VMp
+DATABASE_URL=postgres://aya:aya1234#@localhost:5432/city_explorer
+
+
